fix: declare MediaQueryService for InMemory config