@@ -15,12 +15,11 @@
  */
 package io.gravitee.rest.api.service.impl;
 
-import static java.util.Collections.emptyMap;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.eq;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.when;
@@ -30,7 +29,6 @@ import com.fasterxml.jackson.databind.ser.PropertyFilter;
 import com.fasterxml.jackson.databind.ser.impl.SimpleFilterProvider;
 import io.gravitee.common.data.domain.Page;
 import io.gravitee.definition.jackson.datatype.GraviteeMapper;
-import io.gravitee.definition.model.DefinitionVersion;
 import io.gravitee.repository.management.api.ApiRepository;
 import io.gravitee.repository.management.api.search.ApiCriteria;
 import io.gravitee.repository.management.api.search.ApiFieldFilter;
@@ -52,38 +50,34 @@ import io.gravitee.rest.api.service.PlanService;
 import io.gravitee.rest.api.service.RoleService;
 import io.gravitee.rest.api.service.SubscriptionService;
 import io.gravitee.rest.api.service.UserService;
-import io.gravitee.rest.api.service.WorkflowService;
 import io.gravitee.rest.api.service.common.GraviteeContext;
 import io.gravitee.rest.api.service.configuration.flow.FlowService;
 import io.gravitee.rest.api.service.converter.ApiConverter;
 import io.gravitee.rest.api.service.converter.CategoryMapper;
+import io.gravitee.rest.api.service.impl.search.SearchResult;
 import io.gravitee.rest.api.service.jackson.filter.ApiPermissionFilter;
 import io.gravitee.rest.api.service.search.SearchEngineService;
 import io.gravitee.rest.api.service.v4.ApiSearchService;
 import io.gravitee.rest.api.service.v4.PrimaryOwnerService;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import org.junit.Before;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.assertj.core.api.Condition;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Spy;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 /**
  * @author Azize Elamrani (azize dot elamrani at gmail dot com)
  */
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class ApiService_SearchTest {
 
-    private static final String USER_NAME = "myUser";
-
     @InjectMocks
-    private ApiServiceImpl apiService = new ApiServiceImpl();
+    private ApiServiceImpl apiService;
 
     @Mock
     private ApiRepository apiRepository;
@@ -125,17 +119,6 @@ public class ApiService_SearchTest {
 
     private final CategoryMapper categoryMapper = spy(new CategoryMapper(mock(CategoryService.class)));
 
-    private ApiConverter apiConverter = spy(
-        new ApiConverter(
-            objectMapper,
-            mock(PlanService.class),
-            mock(FlowService.class),
-            categoryMapper,
-            parameterService,
-            mock(WorkflowService.class)
-        )
-    );
-
     @Mock
     private SearchEngineService searchEngineService;
 
@@ -151,13 +134,17 @@ public class ApiService_SearchTest {
     @Mock
     private ApiSearchService apiSearchService;
 
-    @Before
+    @Mock
+    private ApiConverter apiConverter;
+
+    @BeforeEach
     public void setUp() {
         PropertyFilter apiMembershipTypeFilter = new ApiPermissionFilter();
-        objectMapper.setFilterProvider(
-            new SimpleFilterProvider(Collections.singletonMap("apiMembershipTypeFilter", apiMembershipTypeFilter))
-        );
+        objectMapper.setFilterProvider(new SimpleFilterProvider(Map.of("apiMembershipTypeFilter", apiMembershipTypeFilter)));
         GraviteeContext.cleanContext();
+        lenient()
+            .when(apiConverter.toApiEntity(any(), any(), any(), anyBoolean()))
+            .thenAnswer(invocation -> ApiEntity.builder().id(invocation.getArgument(1, Api.class).getId()).build());
     }
 
     @Test
@@ -165,20 +152,11 @@ public class ApiService_SearchTest {
         final Api api1 = new Api();
         api1.setId("api1");
         api1.setName("api1");
-        final Api api2 = new Api();
-        api2.setId("api2");
-        api2.setName("api2");
 
-        Page<Api> page = new Page<>(Arrays.asList(api1), 2, 1, 2);
-        when(
-            apiRepository.search(
-                eq(getDefaultApiCriteriaBuilder().environmentId("DEFAULT").build()),
-                any(),
-                any(),
-                eq(new ApiFieldFilter.Builder().excludePicture().build())
-            )
-        )
-            .thenReturn(page);
+        Page<Api> page = new Page<>(List.of(api1), 2, 1, 2);
+        when(apiRepository.search(any(), any(), any(), any())).thenReturn(page);
+
+        when(searchEngineService.search(any(), any())).thenReturn(new SearchResult(List.of(api1.getId())));
 
         UserEntity admin = new UserEntity();
         admin.setId("admin");
@@ -192,12 +170,8 @@ public class ApiService_SearchTest {
             new PageableImpl(2, 1)
         );
 
-        assertNotNull(apiPage);
-        assertEquals(1, apiPage.getContent().size());
-        assertEquals(api1.getId(), apiPage.getContent().get(0).getId());
-        assertEquals(2, apiPage.getPageNumber());
-        assertEquals(1, apiPage.getPageElements());
-        assertEquals(2, apiPage.getTotalElements());
+        assertThat(apiPage).is(page(2, 1, 2));
+        assertThat(apiPage.getContent()).map(ApiEntity::getId).containsOnly(api1.getId());
     }
 
     @Test
@@ -214,7 +188,7 @@ public class ApiService_SearchTest {
         api3.setId("api3");
         api3.setName("API Test");
 
-        when(apiSearchService.searchIds(eq(GraviteeContext.getExecutionContext()), any(), any(), any(), eq(true)))
+        when(apiSearchService.searchIds(eq(GraviteeContext.getExecutionContext()), any(), any(), any(), anyBoolean()))
             .thenReturn(List.of(api3.getId(), api1.getId(), api2.getId()));
 
         when(
@@ -225,7 +199,7 @@ public class ApiService_SearchTest {
                 ApiFieldFilter.allFields()
             )
         )
-            .thenReturn(new Page<>(Arrays.asList(api3, api1, api2), 0, 3, 3));
+            .thenReturn(new Page<>(List.of(api3, api1, api2), 0, 3, 3));
 
         UserEntity admin = new UserEntity();
         admin.setId("admin");
@@ -248,25 +222,23 @@ public class ApiService_SearchTest {
         final Page<ApiEntity> apiPage = apiService.search(
             GraviteeContext.getExecutionContext(),
             "API Test",
-            emptyMap(),
+            Map.of(),
             null,
             new PageableImpl(1, 10)
         );
 
-        assertThat(apiPage.getPageNumber()).isEqualTo(1);
-        assertThat(apiPage.getPageElements()).isEqualTo(3);
-        assertThat(apiPage.getTotalElements()).isEqualTo(3);
+        assertThat(apiPage).is(page(1, 3, 3));
 
         assertThat(apiPage.getContent()).extracting(ApiEntity::getId).containsExactly(api3.getId(), api1.getId(), api2.getId());
     }
 
-    private ApiCriteria.Builder getDefaultApiCriteriaBuilder() {
-        // By default in this service, we do not care for V4 APIs.
-        List<DefinitionVersion> allowedDefinitionVersion = new ArrayList<>();
-        allowedDefinitionVersion.add(null);
-        allowedDefinitionVersion.add(DefinitionVersion.V1);
-        allowedDefinitionVersion.add(DefinitionVersion.V2);
-
-        return new ApiCriteria.Builder().definitionVersion(allowedDefinitionVersion);
+    private <T> Condition<Page<T>> page(int pageNumber, int pageElements, int totalElements) {
+        return new Condition<>(
+            p -> pageNumber == p.getPageNumber() && pageElements == p.getPageElements() && totalElements == p.getTotalElements(),
+            "pageNumber:%d pageElements:%d totalElements:%d",
+            pageNumber,
+            pageElements,
+            totalElements
+        );
     }
 }
